# VHG_Math

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: general_math.yaml  integration.yaml
data/: README.md  general_math_seeds.jsonl  integration_seeds.jsonl
env/: check_env.py  install.sh  requirements.txt
recipes/: README.md  eval_solver.sh  train_setter.sh  train_solver.sh
scripts/: eval_solver.py  serve_verifier.py  train_solver.py
vhg/: __init__.py  evaluate.py  generate.py  prompts.py  rewards.py  score.py  service.py  train.py  utils.py  verify.py
