[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymous-math-reasoning-release"
version = "0.1.0"
description = "Anonymous academic code release for mathematical reasoning research."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Anonymous Authors"},
]
dependencies = [
  "antlr4-python3-runtime==4.11.0",
  "fastapi",
  "httpx",
  "latex2sympy2==1.5.4",
  "math-verify==0.9.0",
  "numpy==1.26.4",
  "openai",
  "pyyaml",
  "requests",
  "sympy==1.14.0",
  "tqdm",
  "uvicorn",
]

[project.optional-dependencies]
rl = [
  "datasets",
  "ninja",
  "ray",
  "torch",
  "transformers==4.57.1",
  "verl==0.6.1",
  "vllm==0.11.0",
]

[tool.setuptools.packages.find]
include = ["vhg*"]
